# UAccounting

./: CMakeLists.txt  README.md
db/: atlas_scheme_inspect.sh  current.sqlite
main/: Main.qml  main.cpp
modules/Core/: CMakeLists.txt  asqltablemodel.cpp  asqltablemodel.h  datapipe.cpp  datapipe.h  defs.h  guicell.cpp  guicell.h  guiitem.cpp  guiitem.h  guitable.cpp  guitable.h  guitablemodel.cpp  guitablemodel.h  macros.h  sqladapter.cpp  sqladapter.h  sqladapterpostgres.cpp  sqladapterpostgres.h  sqladaptersqlite.cpp  sqladaptersqlite.h  sqldatabase.cpp  sqldatabase.h  sqlquery.cpp  sqlquery.h  theme.cpp  theme.h
modules/Core/qml/: Cell.qml  CellBool.qml  CellNumeric.qml  CellString.qml  Header.qml  Table.qml
tests/: CMakeLists.txt  tst_asqltablemodel.cpp  tst_guitablemodel.cpp  tst_qml.cpp
tests/qml/: tst_sql.qml
